ocaml (3.11.1-3) UNRELEASED; urgency=low

  * Add two tools:
    - ocamlbyteinfo to read content of bytecode binaries
    - ocamlplugininfo to read content of shared object files (.cmxs)
  * Add myself to Uploaders

 -- Mehdi Dogguy <dogguy@pps.jussieu.fr>  Tue, 21 Jul 2009 17:09:31 +0200

ocaml (3.11.1-2) unstable; urgency=low

  * Remove build-dependency to docbook-* (not needed anymore, since
    policy has been moved to dh-ocaml)

 -- Stephane Glondu <steph@glondu.net>  Wed, 24 Jun 2009 12:47:31 +0200

ocaml (3.11.1-1) unstable; urgency=low

  [ Samuel Mimram ]
  * Add kfreebsd-amd64 to the list of supported native architectures.
    (Closes: #519916)

  [ Stefano Zacchiroli ]
  * debian/control:
    - remove recommends to ledit from ocaml-nox (does not ship "ocaml")

  [ Stephane Glondu ]
  * New upstream release:
    - remove dbm_ldopts.dpatch (merged upstream)
    - switch patch system to quilt
  * debian/control:
    - update Standards-Version to 3.8.2
    - move to new section ocaml
    - change Recommends from ledit to "ledit | readline-editor" for
      ocaml-interp
    - remove various obsolete Conflicts and Replaces
  * Move OCaml standard library to /usr/lib/ocaml

 -- Stephane Glondu <steph@glondu.net>  Wed, 24 Jun 2009 10:59:46 +0200

ocaml (3.11.0-5) unstable; urgency=low

  * Uploading to unstable
  * debian/control: bump dh-ocaml to (>= 0.4) to avoid buggy ocamlinit.mk

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 22 Feb 2009 08:49:13 +0100

ocaml (3.11.0-4) experimental; urgency=low

  [ Samuel Mimram ]
  * Add native versions of ocamldep and ocamldoc in findlib's configuration
    when ocaml-native-compilers is installed, closes: #516085.

  [ Stephane Glondu ]
  * Add a script to handle native modules of standard library, and a
    README.source to document it (fixes FTBFS on sparc and powerpc, which
    are native, but do not provide .p.cmx files) (Closes: #516211)
  * Fix FTBFS on bytecode-only architectures: