@@ -1,64 +1,3 @@
 usr/bin/ocaml
 usr/share/man/man1/ocaml.1
 debian/ocaml.xpm /usr/share/pixmaps
-toplevel/*.mli @OCamlStdlibDir@
-
-@OCamlStdlibDir@/stdlib.cma
-@OCamlStdlibDir@/arg.cmi
-@OCamlStdlibDir@/array.cmi
-@OCamlStdlibDir@/arrayLabels.cmi
-@OCamlStdlibDir@/buffer.cmi
-@OCamlStdlibDir@/callback.cmi
-@OCamlStdlibDir@/camlinternalOO.cmi
-@OCamlStdlibDir@/char.cmi
-@OCamlStdlibDir@/complex.cmi
-@OCamlStdlibDir@/digest.cmi
-@OCamlStdlibDir@/filename.cmi
-@OCamlStdlibDir@/format.cmi
-@OCamlStdlibDir@/gc.cmi
-@OCamlStdlibDir@/genlex.cmi
-@OCamlStdlibDir@/hashtbl.cmi
-@OCamlStdlibDir@/int32.cmi
-@OCamlStdlibDir@/int64.cmi
-@OCamlStdlibDir@/lazy.cmi
-@OCamlStdlibDir@/lexing.cmi
-@OCamlStdlibDir@/list.cmi
-@OCamlStdlibDir@/listLabels.cmi
-@OCamlStdlibDir@/map.cmi
-@OCamlStdlibDir@/marshal.cmi
-@OCamlStdlibDir@/moreLabels.cmi
-@OCamlStdlibDir@/nativeint.cmi
-@OCamlStdlibDir@/obj.cmi
-@OCamlStdlibDir@/oo.cmi
-@OCamlStdlibDir@/parsing.cmi
-@OCamlStdlibDir@/pervasives.cmi
-@OCamlStdlibDir@/printexc.cmi
-@OCamlStdlibDir@/printf.cmi
-@OCamlStdlibDir@/queue.cmi
-@OCamlStdlibDir@/random.cmi
-@OCamlStdlibDir@/scanf.cmi
-@OCamlStdlibDir@/set.cmi
-@OCamlStdlibDir@/sort.cmi
-@OCamlStdlibDir@/stack.cmi
-@OCamlStdlibDir@/stdLabels.cmi
-@OCamlStdlibDir@/std_exit.cmi
-@OCamlStdlibDir@/stream.cmi
-@OCamlStdlibDir@/string.cmi
-@OCamlStdlibDir@/stringLabels.cmi
-@OCamlStdlibDir@/sys.cmi
-@OCamlStdlibDir@/weak.cmi
-@OCamlStdlibDir@/toplevellib.cma
-@OCamlStdlibDir@/toploop.cmi
-@OCamlStdlibDir@/topdirs.cmi
-@OCamlStdlibDir@/topmain.cmi
-@OCamlStdlibDir@/unix.cmi
-@OCamlStdlibDir@/unixLabels.cmi
-@OCamlStdlibDir@/str.cmi
-@OCamlStdlibDir@/dynlink.cmi
-@OCamlStdlibDir@/dynlink.cma
-@OCamlStdlibDir@/bigarray.cmi
-@OCamlStdlibDir@/big_int.cmi
-@OCamlStdlibDir@/nat.cmi
-@OCamlStdlibDir@/num.cmi
-@OCamlStdlibDir@/ratio.cmi
-@OCamlStdlibDir@/arith_status.cmi
