@@ -3,6 +3,7 @@ ocaml (3.11.1-3) UNRELEASED; urgency=low
   * Add two tools:
     - ocamlbyteinfo to read content of bytecode binaries
     - ocamlplugininfo to read content of shared object files (.cmxs)
+  * Move some files from ocaml-interp to ocaml-nox and ocaml-base-nox
   * Add myself to Uploaders
 
  -- Mehdi Dogguy <dogguy@pps.jussieu.fr>  Tue, 21 Jul 2009 17:09:31 +0200
